bugfix: there are two dead lock bugs

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -34,6 +34,13 @@ KeyColor="Key Color"
 Similarity="Similarity (1-1000)"
 Smoothness="Smoothness (1-1000)"
 ColorSpillReduction="Key Color Spill Reduction (1-1000)"
+Text.Left="Left"
+Text.Right="Right"
+Text.Top="Top"
+Text.Bottom="Bottom"
+Text.Width="Width"
+Text.Height="Height"
+Text.Relative="Relative"
 Crop.Left="Left"
 Crop.Right="Right"
 Crop.Top="Top"
